# feast-agentic

./: .gitignore  .mcp.json  MCP_SETUP.md  README.md  pyproject.toml  run.sh  setup_data.py
.cursor/: mcp.json
docs/: DB_MCP.md
feature_repo/: feature_store.yaml  features.py
mcp_db_server/: __init__.py  connections.py  server.py
scripts/: serve_feature_uvicorn.py  verify_mcp.py
